@@ -96,6 +96,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #25471: Sockets returned from accept() shouldn't appear to be
+  nonblocking.
+
 - Issue #25441: asyncio: Raise error from drain() when socket is closed.
 
 - Issue #25411: Improved Unicode support in SMTPHandler through better use of
